8233375: JFR emergency dump does not recover thread state

Reviewed-by: dholmes, mgronlun